--- a/StoredProcedure/StoredProcedure/Views/Employee/Index.cshtml
+++ b/StoredProcedure/StoredProcedure/Views/Employee/Index.cshtml
@@ -1,4 +1,12 @@
 ﻿﻿<li>
     <a class="btn btn-danger" asp-controller="Employee" asp-action="SearchResult">SearchResult</a>
+</li>﻿
+
+<li>
+    <a class="btn btn-danger" asp-controller="Employee" asp-action="DynamicSQL">DynamicSQL</a>
+</li>
+
+<li>
+    <a class="btn btn-danger" asp-controller="Employee" asp-action="DynamicSQLInStoredProcedure">Dynamic SQL In Stored Procedure</a>
 </li>
 <br>
